--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
@@ -109,36 +109,6 @@
                        IsVisible="{Binding HasLogFiles, Converter={StaticResource InvertedBoolConverter}}" />
 
                 <VerticalStackLayout IsVisible="{Binding HasLogFiles}">
-                    <Grid Margin="0,0,0,8">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto" />
-                            <ColumnDefinition Width="auto" />
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="auto" />
-                            <RowDefinition Height="auto" />
-                        </Grid.RowDefinitions>
-                        
-                        <Label Text="{x:Static r:Strings.Settings_Debug_LogFiles_Title}" 
-                               Margin="0,7,8,7"
-                               Grid.Column="0" />
-
-                        <Picker 
-                            Grid.Column="1"
-                            ItemsSource="{Binding LogFilesNameOnly}"
-                            SelectedIndex="{Binding SelectedLogFileIndex, Mode=TwoWay}"
-                            Margin="0,0,0,12"
-                            />
-
-                        <Button Text="{x:Static r:Strings.Settings_Debug_LogFiles_Open}"
-                                Margin="8,0,0,0"
-                                x:Name="ButtonOpenLogFile"
-                                Clicked="ButtonOpenLogFile_Clicked"
-                                HorizontalOptions="Start"
-                                Grid.Row="1"
-                                Grid.Column="2"
-                                />
-                    </Grid>
 
                     <HorizontalStackLayout Spacing="8">
                         <Button Command="{Binding ZipLogFilesCommand}" Text="{x:Static r:Strings.Settings_Debug_LogFiles_SendLogFiles}" />
@@ -158,6 +128,36 @@
                             VerticalOptions="Center"
                             />
                     </HorizontalStackLayout>
+                    
+                    <Grid Margin="0,8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                        </Grid.RowDefinitions>
+                        
+                        <Label Text="{x:Static r:Strings.Settings_Debug_LogFiles_Title}" 
+                               Margin="{OnPlatform 0, WinUI='0,7,8,7', Android='0,10,8,0'}"
+                               Grid.Column="0" />
+
+                        <Picker 
+                            Grid.Column="1"
+                            ItemsSource="{Binding LogFilesNameOnly}"
+                            SelectedIndex="{Binding SelectedLogFileIndex, Mode=TwoWay}"
+                            Margin="{OnPlatform 0, WinUI='0,0,0,12'}"
+                            />
+
+                        <Button Text="{x:Static r:Strings.Settings_Debug_LogFiles_Open}"
+                                x:Name="ButtonOpenLogFile"
+                                Clicked="ButtonOpenLogFile_Clicked"
+                                HorizontalOptions="Start"
+                                Grid.Row="1"
+                                Grid.Column="2"
+                                />
+                    </Grid>
                 </VerticalStackLayout>
 
                 <Grid RowDefinitions="Auto, *" HeightRequest="700" Margin="0,8,0,0">
