--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
@@ -151,8 +151,7 @@
                             />
 
                         <Button Text="{x:Static r:Strings.Settings_Debug_LogFiles_Open}"
-                                x:Name="ButtonOpenLogFile"
-                                Clicked="ButtonOpenLogFile_Clicked"
+                                Command="{Binding ReadSelectedLogFileCommand}"
                                 HorizontalOptions="Start"
                                 Grid.Row="1"
                                 Grid.Column="2"
@@ -160,21 +159,13 @@
                     </Grid>
                 </VerticalStackLayout>
 
-                <Grid RowDefinitions="Auto, *" HeightRequest="700" Margin="0,8,0,0">
-                    <HorizontalStackLayout Spacing="25" Padding="30,0"  VerticalOptions="Center">
-                        <Button Text="Read logs" Clicked="OnReadLogFileClicked" HorizontalOptions="Center" />
-                        <Button Text="Clear logs" Clicked="OnClearLogFileClicked" HorizontalOptions="Center" />
-                    </HorizontalStackLayout>
-
-                    <Editor 
-                        x:Name="LogEditorBox" 
-                        HeightRequest="500"
-                        BackgroundColor="DarkBlue"
-
-                        Placeholder="No log file" 
-                        Grid.Row="1"
-                        />
-                </Grid>
+                <Editor 
+                    x:Name="LogEditorBox" 
+                    HeightRequest="500"
+                    BackgroundColor="DarkBlue"
+                    IsVisible="{Binding SelectedLogFileContent, Converter={StaticResource NullToIsVisibleConverter}}"
+                    Text="{Binding SelectedLogFileContent}"
+                    />
             </VerticalStackLayout>
         </VerticalStackLayout>
     </ScrollView>
