--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
@@ -43,6 +43,20 @@
             <views:GraphControl />
             <views:SynchronizeControl />
 
+            
+            <Rectangle Style="{StaticResource Separator}" />
+
+            <Label Text="{x:Static r:Strings.Settings_Theme_Title}" 
+               Style="{StaticResource SubtitleTextBlockStyle}"
+               />
+
+            <Label Text="{x:Static r:Strings.Settings_Theme_Description}" />
+
+            <Picker ItemsSource="{Binding ThemeTypes}"
+                    SelectedIndex="{Binding ThemeIndex, Mode=TwoWay}"
+                    Margin="{OnPlatform 0, WinUI='0,0,0,12'}"
+                    />
+
             <Rectangle Style="{StaticResource Separator}" />
             
             <Label Text="{x:Static r:Strings.Settings_Play_Title}" 
