--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -21,10 +21,11 @@
             <Color x:Key="InactiveProgramColor">Gray</Color>
             <Color x:Key="DebugColor">#bbbbbb</Color>
             <Color x:Key="HyperlinkColor">#0063B1</Color>
-            <Color x:Key="PanelBackground">#1E1E1E</Color>
+            <Color x:Key="PanelBackgroundDark">#1E1E1E</Color>
+            <Color x:Key="PanelBackgroundLight">#E1E1E1</Color>
             <Color x:Key="WarningColor">#FF9900</Color>
             <x:Double x:Key="FontSizeHeader">20</x:Double>
-            <x:Double x:Key="FontSizeNormal">14</x:Double>
+            <x:Double x:Key="FontSizeNormal">13</x:Double>
             <x:Double x:Key="FontSizeDetails">12</x:Double>
             <x:Double x:Key="HeaderFavoriteStarSize">16</x:Double>
             <x:Double x:Key="ListItemImageSize">64</x:Double>
@@ -34,13 +35,16 @@
             <Color x:Key="SwipeControlBackgroundDownload">DarkGreen</Color>
             <Color x:Key="SwipeControlBackgroundRemove">DarkRed</Color>
 
+            <Color x:Key="PanelIconColorDark">#DDD</Color>
+            <Color x:Key="PanelIconColorLight">#222</Color>
+            <Color x:Key="FadedPanelIconColorDark">#777</Color>
+            <Color x:Key="FadedPanelIconColorLight">#999</Color>
+
             <OnPlatform x:Key="NormalPageMargin" x:TypeArguments="Thickness" Default="20">
                 <On Platform="WinUI">8</On>
             </OnPlatform>
 
             <Style x:Key="ListItem" TargetType="Grid">
-                <!--<Setter Property="BackgroundColor" Value="DarkViolet" />-->
-                <Setter Property="BackgroundColor" Value="{StaticResource Gray950}" />
                 <Setter Property="HeightRequest" Value="84" />
                 <Setter Property="Padding" Value="{OnPlatform 0, WinUI='8,6,16,6', Android='16,6,16,6'}" />
                 <Setter Property="Margin" Value="0,0" />
@@ -52,13 +56,11 @@
                 <Setter Property="Margin" Value="0,0,0,0" />
                 <Setter Property="VerticalOptions" Value="Start" />
                 <Setter Property="HeightRequest" Value="38" />
-                <!--<Setter Property="BackgroundColor" Value="DarkBlue" />-->
             </Style>
 
             <Style x:Key="ListItemContentArea" TargetType="Grid">
                 <Setter Property="VerticalOptions" Value="Start" />
                 <Setter Property="HeightRequest" Value="44" />
-                <!--<Setter Property="BackgroundColor" Value="DarkSlateBlue" />-->
             </Style>
             
             <Style x:Key="ListItemLeftImage" TargetType="Image">
@@ -77,21 +79,6 @@
                 <Setter Property="ButtonBackgroundDiameter" Value="40" />
             </Style>
 
-            <OnPlatform x:Key="PanelIconColor" x:TypeArguments="Color" Default="#DDD">
-                <On Platform="WinUI">#DDD</On>
-            </OnPlatform>
-            
-            <OnPlatform x:Key="FadedPanelIconColor" x:TypeArguments="Color" Default="#777">
-                <On Platform="WinUI">#777</On>
-            </OnPlatform>
-
-            
-            <Style TargetType="Label">
-                <Setter Property="TextColor" Value="{DynamicResource PrimaryColor}" />
-                <Setter Property="FontFamily" Value="OpenSansRegular" />
-                <Setter Property="FontSize" Value="13" />
-            </Style>
-
             <Style x:Key="ListGroupTextStyle" TargetType="Label">
                 <Setter Property="TextColor" Value="{DynamicResource HyperlinkColor}" />
                 <Setter Property="FontFamily" Value="OpenSansRegular" />
@@ -100,7 +87,6 @@
             </Style>
 
             <Style x:Key="ListHeaderTextStyle" TargetType="Label">
-                <Setter Property="TextColor" Value="{DynamicResource PrimaryColor}" />
                 <Setter Property="FontFamily" Value="OpenSansRegular" />
                 <Setter Property="FontSize" Value="{StaticResource FontSizeHeader}" />
                 <Setter Property="FontAttributes" Value="Bold" />
@@ -108,7 +94,6 @@
             </Style>
 
             <Style x:Key="ListNormalTextStyle" TargetType="Label">
-                <Setter Property="TextColor" Value="{DynamicResource PrimaryColor}" />
                 <Setter Property="FontFamily" Value="OpenSansRegular" />
                 <Setter Property="FontSize" Value="{StaticResource FontSizeNormal}" />
                 <Setter Property="MaxLines" Value="1" />
@@ -133,16 +118,6 @@
                 <Setter Property="FontSize" Value="16" />
             </Style>
 
-            <Style TargetType="Button">
-                <!--<Setter Property="TextColor" Value="{DynamicResource SecondaryColor}" />-->
-                <Setter Property="TextColor" Value="{DynamicResource PrimaryColor}" />
-                <Setter Property="FontFamily" Value="OpenSansRegular" />
-                <!--<Setter Property="BackgroundColor" Value="{DynamicResource PrimaryColor}" />-->
-                <Setter Property="BackgroundColor" Value="{DynamicResource PanelBackground}" />
-                <Setter Property="Padding" Value="14,10" />
-                <Setter Property="CornerRadius" Value="0" />
-            </Style>
-
             <Style x:Key="HyperlinkButton" TargetType="Button">
                 <Setter Property="TextColor" Value="{StaticResource HyperlinkColor}" />
                 <Setter Property="BackgroundColor" Value="Transparent" />
@@ -159,15 +134,11 @@
                 <Setter Property="Margin" Value="4" />
                 <Setter Property="BorderWidth" Value="0" />
             </Style>
-            
-            <Style TargetType="Page" ApplyToDerivedTypes="True">
-                <Setter Property="BackgroundColor" Value="{StaticResource Gray950}"/>
-            </Style>
 
             <Style x:Key="Separator" TargetType="Rectangle">
                 <Setter Property="StrokeThickness" Value="0" />
                 <Setter Property="HeightRequest" Value="1" />
-                <Setter Property="Fill" Value="{StaticResource PanelBackground}" />
+                <Setter Property="Fill" Value="{AppThemeBinding Dark={StaticResource PanelBackgroundDark}, Light={StaticResource PanelBackgroundLight}}" />
             </Style>
 
             <FontImageSource
@@ -181,84 +152,84 @@
                 x:Key="ToolBarIconNotFavorite"
                 FontFamily="FontAwesome"
                 Glyph="{x:Static style:IconFont.Star}"
-                Color="{StaticResource FadedPanelIconColor}"
+                Color="{AppThemeBinding Dark={StaticResource FadedPanelIconColorDark}, Light={StaticResource FadedPanelIconColorLight}}"
                 Size="16"/>
 
             <FontImageSource
                 x:Key="ToolBarIconFavorite"
                 FontFamily="FontAwesome"
                 Glyph="{x:Static style:IconFont.Star}"
-                Color="{StaticResource PanelIconColor}"
+                Color="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
                 Size="16"/>
 
             <FontImageSource
                 x:Key="ToolBarIconDownload"
                 FontFamily="FontAwesome"
                 Glyph="{x:Static style:IconFont.Download}"
-                Color="{StaticResource PanelIconColor}"
+                Color="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
                 Size="16"/>
 
             <FontImageSource
                 x:Key="ToolBarIconDelete"
                 FontFamily="FontAwesome"
                 Glyph="{x:Static style:IconFont.Trash}"
-                Color="{StaticResource PanelIconColor}"
+                Color="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
                 Size="16"/>
 
             <FontImageSource
                 x:Key="ToolBarIconIsNotListened"
                 FontFamily="FontAwesome"
                 Glyph="{x:Static style:IconFont.CheckCircle}"
-                Color="{StaticResource FadedPanelIconColor}"
+                Color="{AppThemeBinding Dark={StaticResource FadedPanelIconColorDark}, Light={StaticResource FadedPanelIconColorLight}}"
                 Size="16"/>
 
             <FontImageSource
                 x:Key="ToolBarIconIsListened"
                 FontFamily="FontAwesome"
                 Glyph="{x:Static style:IconFont.CheckCircle}"
-                Color="{StaticResource PanelIconColor}"
+                Color="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
                 Size="16"/>
 
             <FontImageSource
                 x:Key="ToolBarIconSettings"
                 FontFamily="FontAwesome"
                 Glyph="{x:Static style:IconFont.Cog}"
-                Color="{StaticResource PanelIconColor}"
+                Color="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
                 Size="16"/>
 
             <FontImageSource
                 x:Key="Play"
                 FontFamily="FontAwesome"
                 Glyph="{x:Static style:IconFont.Play}"
-                Color="{StaticResource PanelIconColor}"
+                Color="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
                 Size="16"/>
 
             <FontImageSource
                 x:Key="Pause"
                 FontFamily="FontAwesome"
                 Glyph="{x:Static style:IconFont.Pause}"
-                Color="{StaticResource PanelIconColor}"
+                Color="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
                 Size="16"/>
 
             <FontImageSource
                 x:Key="Previous"
                 FontFamily="FontAwesome"
                 Glyph="{x:Static style:IconFont.Backward}"
-                Color="{StaticResource PanelIconColor}"
+                Color="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
                 Size="16"/>
 
             <FontImageSource
                 x:Key="Next"
                 FontFamily="FontAwesome"
                 Glyph="{x:Static style:IconFont.Forward}"
-                Color="{StaticResource PanelIconColor}"
+                Color="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
                 Size="16"/>
 
             <FontImageSource
                 x:Key="PlayList"
                 FontFamily="FontAwesome"
                 Glyph="{x:Static style:IconFont.List}"
-                Color="{StaticResource PanelIconColor}"
+                Color="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
                 Size="16"/>
 
 
@@ -270,9 +241,8 @@
                 Size="60"/>
 
 
-            <converters:StringToColorConverter x:Key="StringToColorConverter" FallbackColor="{StaticResource PrimaryColor}" />
-            <converters:StringToColorConverter x:Key="StringToHalfTransparentColorConverter" FallbackColor="{StaticResource PrimaryColor}" Alpha="{OnPlatform 0.1, Android=0.3}"/>
-
+            <converters:StringToColorConverter x:Key="StringToColorConverter" FallbackColor="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource White}}" />
+            <converters:StringToColorConverter x:Key="StringToHalfTransparentColorConverter" FallbackColor="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource White}}" Alpha="{OnPlatform 0.1, Android=0.3}"/>
 
             <converters:StringToBoolConverter x:Key="StringToIsVisibleConverter" />
             <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
@@ -291,7 +261,7 @@
                                              FalseImage="{StaticResource Play}" 
                                              TrueImage="{StaticResource Pause}" />
             <converters:BoolToColorConverter x:Key="BoolToIsListenedColorConverter" 
-                                             FalseColor="{StaticResource PrimaryColor}" 
+                                             FalseColor="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource White}}" 
                                              TrueColor="{StaticResource InactiveProgramColor}" />
             <converters:BoolToStringConverter x:Key="BoolToToggleIsListenedConverter" 
                                              FalseValue="{x:Static r:Strings.Episodes_SetAsListened}" 
