--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
@@ -49,11 +49,24 @@
                Style="{StaticResource SubtitleTextBlockStyle}"
                />
 
-            <Label 
-                Text="{x:Static r:Strings.Settings_Play_PreferMusicDescription}"
-                Margin="0,8,0,0"
-                />
-            <Switch IsToggled="{Binding Settings.PreferStreamsWithMusic}" />
+            <Grid RowDefinitions="Auto, Auto" ColumnDefinitions="*, Auto">
+                <!-- On Windows, label on top off switch. On Android label left to switch -->
+                
+                <Label 
+                    Text="{x:Static r:Strings.Settings_Play_PreferMusicDescription}"
+                    VerticalOptions="Center"
+                    Grid.Row="{OnPlatform WinUI=0, Default=0}"
+                    Grid.Column="{OnPlatform WinUI=0, Default=0}"
+                    Margin="{OnPlatform WinUI='0,0,0,8', Default=0}"
+                    />
+
+                <Switch 
+                    VerticalOptions="Center"
+                    IsToggled="{Binding Settings.PreferStreamsWithMusic}"
+                    Grid.Row="{OnPlatform WinUI=1, Default=0}"
+                    Grid.Column="{OnPlatform WinUI=0, Default=1}"
+                    />
+            </Grid>
 
             <Label Text="{x:Static r:Strings.Settings_Play_DownloadNote}" 
                />
@@ -84,26 +97,40 @@
                 <Rectangle Style="{StaticResource Separator}" />
 
                 <Label 
-                    Text="{x:Static r:Strings.Settings_Debug_Title}" 
+                    Text="{x:Static r:Strings.Settings_Debug_Title}"
+                    Margin="0,8"
                     Style="{StaticResource SubtitleTextBlockStyle}"
                     />
 
-                <Label 
-                    Text="{x:Static r:Strings.Settings_Debug_LogFiles_Title}" 
-                    Margin="0,8,0,0"
-                    Style="{StaticResource Subtitle2TextBlockStyle}"
+                <Grid RowDefinitions="Auto, Auto" ColumnDefinitions="*, Auto">
+                    <!-- On Windows, label on top off switch. On Android label left to switch -->
+
+                    <Label 
+                        Text="{x:Static r:Strings.Settings_Debug_LogFiles_EnableLogToFile}"
+                        VerticalOptions="Center"
+                        Grid.Row="{OnPlatform WinUI=0, Default=0}"
+                        Grid.Column="{OnPlatform WinUI=0, Default=0}"
+                        Margin="{OnPlatform WinUI='0,0,0,4', Default=0}"
                     />
 
-                <Label 
-                    Text="{x:Static r:Strings.Settings_Debug_LogFiles_EnableLogToFile}"                    
-                    Margin="0,12,0,8"
+                    <Switch 
+                        VerticalOptions="Center"
+                        IsToggled="{Binding Settings.WriteLogsToFile}"
+                        Grid.Row="{OnPlatform WinUI=1, Default=0}"
+                        Grid.Column="{OnPlatform WinUI=0, Default=1}"
                     />
-                <Switch IsToggled="{Binding Settings.WriteLogsToFile}" />
+                </Grid>
+
+                <Label 
+                    Text="{x:Static r:Strings.Settings_Debug_LogFiles_Title}" 
+                    Margin="0,8"
+                    Style="{StaticResource Subtitle2TextBlockStyle}"
+                    />
 
                 <Label Text="{x:Static r:Strings.Settings_Debug_LogFiles_NoFiles}" 
                        IsVisible="{Binding HasLogFiles, Converter={StaticResource InvertedBoolConverter}}" />
 
-                <VerticalStackLayout IsVisible="{Binding HasLogFiles}" Margin="0,16,0,0">
+                <VerticalStackLayout IsVisible="{Binding HasLogFiles}" Margin="0,8,0,0">
 
                     <HorizontalStackLayout Spacing="8">
                         <Button Command="{Binding ZipLogFilesCommand}" Text="{x:Static r:Strings.Settings_Debug_LogFiles_SendLogFiles}" />
