Adds build time information.

--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
@@ -18,6 +18,7 @@
                     </Label.GestureRecognizers>
                 </Label>
                 <Label Text="{x:Static r:Strings.About_Description}" />
+                <Label Text="{Binding BuildDetails}" Style="{StaticResource DetailedTextStyle}" TextColor="{StaticResource InactiveProgramColor}" />
                 <Label Text="{x:Static r:Strings.About_Credits_Title}" Style="{StaticResource Subtitle2TextBlockStyle}" />
                 <Label Text="{x:Static r:Strings.About_Credits_Line1}" />
                 <Label Text="{x:Static r:Strings.About_Credits_Line2}" />
