Adds support for reloading log file.

--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Logging/LogFileDetailsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Logging/LogFileDetailsPage.xaml
@@ -11,7 +11,7 @@
         <views:DownloadState Padding="{StaticResource NormalPageMargin}" />
 
         <RefreshView 
-            Command="{Binding RefreshCommand}" 
+            Command="{Binding FullRefreshCommand}" 
             IsRefreshing="{Binding IsRefreshing}"
             IsVisible="{Binding HasData}">
             <Editor 
