Makes log view readonly.

--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Logging/LogFileDetailsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Logging/LogFileDetailsPage.xaml
@@ -18,6 +18,7 @@
                 x:Name="LogEditorBox" 
                 Margin="{StaticResource NormalPageMargin}"
                 Text="{Binding LogFileContent}"
+                IsReadOnly="True"
                 />
         </RefreshView>
     </Grid>
